--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/smartbyte.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ali | Software Engineer</title>
-    <script>
-      if (localStorage.getItem('theme') === 'dark' || 
-         (!localStorage.getItem('theme') && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
-          document.documentElement.classList.add('dark');
-      } else {
-          document.documentElement.classList.remove('dark');
-      }
-  </script>
-  
+    <meta name="theme-color" content="#000000" />
+    <title>SmartByte Sub - Buy Data and Airtime at affordable</title>
   </head>
   <body>
     <div id="root"></div>
